--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -281,7 +281,7 @@ jobs:
 
   publish_npm:
     docker:
-      - image: circleci/node:12.20
+      - image: cimg/node:16.7.0
         auth:
           username: ${DOCKER_USER}
           password: ${DOCKER_PASS}
