--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@
 #
 version: 2.1
 orbs:
-  node: circleci/node@4.7.0
+  node: circleci/node@5.0.0
 workflows:
   compile-workflow:
     jobs:
@@ -90,7 +90,7 @@ executors:
   openjdk:
       working_directory: ~/repo
       docker:
-        - image: circleci/openjdk:11-jdk
+        - image: cimg/openjdk:17.0.2
           auth:
             username: ${DOCKER_USER}
             password: ${DOCKER_PASS}
@@ -98,7 +98,7 @@ executors:
   virtuoso_environment_executor:
       working_directory: ~/repo
       docker:
-        - image: circleci/openjdk:11-jdk
+        - image: cimg/openjdk:17.0.2
           auth:
             username: ${DOCKER_USER}
             password: ${DOCKER_PASS}
