--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -275,7 +275,7 @@ jobs:
 
   publish-github-release:
     docker:
-      - image: circleci/golang:1.8
+      - image: circleci/golang:1.16
     steps:
       - checkout
       - attach_workspace:
@@ -283,6 +283,7 @@ jobs:
       - run:
           name: "Publish Release on GitHub"
           command: |
+            ls build
             go get github.com/tcnksm/ghr
             VERSION=${CIRCLE_TAG}
             ls
