--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -258,6 +258,7 @@ jobs:
       - run:
           name: Release Assembly
           command: |
+            export NODE_OPTIONS=--openssl-legacy-provider
             export DISCOVERY_VERSION="${CIRCLE_TAG}"
             # browser debug lib
             sbt discoveryJS/fastOptJS/webpack
