--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -260,6 +260,7 @@ jobs:
           command: |
             export NODE_OPTIONS=--openssl-legacy-provider
             export DISCOVERY_VERSION="${CIRCLE_TAG}"
+            echo "https://${GITHUB_TOKEN}:@github.com" > ~/.git-credentials
             # browser debug lib
             sbt discoveryJS/fastOptJS/webpack
             # browser release lib
