--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -262,7 +262,11 @@ jobs:
             export NODE_OPTIONS=--openssl-legacy-provider
             export DISCOVERY_VERSION="${CIRCLE_TAG}"
             export BRANCH=${CIRCLE_TAG:=$CIRCLE_BRANCH}
-            echo "https://${GITHUB_TOKEN}:@github.com" > ~/.git-credentials
+            git config --global -l
+            git config --global user.email circleci@circleci 
+            git config --global user.name CircleCI
+            echo "https://${GITHUB_TOKEN}:@github.com" >> ~/.git-credentials
+            
             # browser debug lib
             sbt discoveryJS/fastOptJS/webpack
             # browser release lib
