--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -263,9 +263,9 @@ jobs:
             git config --global -l
             git config --global user.email circleci@circleci 
             git config --global user.name CircleCI
-            echo "https://${GITHUB_TOKEN}:@github.com" > ~/.git-credentials
+            echo "https://${GITHUB_TOKEN}:@github.com" >> ~/.git-credentials
             touch empty
-            cp empty > ./dist/discovery-web-dev.js
+            cp empty ./dist/discovery-web-dev.js
             rm empty
             git commit dist -m"[Automatic commit / CI] Javascript librairies."
             git push origin $BRANCH
